feat: first working version